Added BE pagination support